# hidss

./: LICENSE  README.md  meson.build
cc/: x86_64-w64-mingw32ucrt.ini
cf/: armv7-w64-mingw32.ini
cli/: common.c  common.h  device.c  linux.c  main.c  meson.build  posix.c  posix.h  windows.c
ctl/: common.c  common.h  device.c  dragonfly.c  freebsd.c  linux.c  main.c  meson.build  netbsd.c  openbsd.c  posix.c  posix.h  uhidraw.c  uhidraw.h  windows.c  windows.manifest  windows.rc
inc/: hidss.h  meson.build
include/: hidss.h
src/: hidss.c  meson.build
tg/: common.c  common.h  image.c  main.c  meson.build  output.c  section.c
